src/objects/MMD_Con_Search_Offered__c.object
<CustomObject>
    <description>(MBI) - MMD - Consultants - Type of Searches Offered</description>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Firm_Profile__c</fullName>
        <label>MMD Firm Profile</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>Searches Offered</relationshipLabel>
        <relationshipName>MMD_Con_Searches_Offered</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OTHSRCH__c</fullName>
        <label>Other Search Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRCHCODE__c</fullName>
        <label>Search Offered Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Offered__c</fullName>
        <formula>CASE( SRCHCODE__c ,
&quot;ACTUARY&quot;,&quot;Actuary&quot;,
&quot;ALTMHEDGE&quot;,&quot;Alternative / Hedge Fund&quot;,
&quot;CUSTMASTER&quot;,&quot;Custodian / Master Trustee&quot;,
&quot;DCPROVIDER&quot;,&quot;Defined Contribution Service Provider&quot;,
&quot;DOMESTMGR&quot;,&quot;Domestic Manager&quot;,
&quot;EMERGEMGR&quot;,&quot;Emerging Market Manager&quot;,
&quot;GICBICMGR&quot;,&quot;GIC/BIC Manager&quot;,
&quot;INTLBANK&quot;,&quot;International Bank / Global Custodian&quot;,
&quot;INTLMGR&quot;,&quot;International Manager&quot;,
&quot;MWMGR&quot;,&quot;Minority / Woman-Owned Manager&quot;,
&quot;MFUND&quot;,&quot;Mutual Fund&quot;,
&quot;PRIVEMGR&quot;,&quot;Private Equity Manager&quot;,
&quot;REMGR&quot;,&quot;Real Estate Manager&quot;,
&quot;RECKEEPER&quot;,&quot;Recordkeeper&quot;,
&quot;SOCMGR&quot;,&quot;Socially Conscious Manager&quot;,
&quot;THIRDADM&quot;,&quot;3rd Party Administrator&quot;,
&quot;OTHER&quot;,&quot;Other Manager&quot;,
SRCHCODE__c 
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Search Offered</label>
        <type>Text</type>
    </fields>
    <label>MMD Con Search Offered</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Con Searches Offered</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>